--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ license = "Apache-2.0"
 clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+symphonia = { version = "0.5", features = ["all"] }
+chrono = { version = "0.4", features = ["serde"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 tempfile = "3.0"
