--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ tokio = { version = "1.0", features = ["full"] }
 symphonia = { version = "0.5", features = ["all"] }
 chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1.0"
+toml = "0.8"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.0"
